--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "testapp",
+  "name": "reactnative-name-badge",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
-    "start": "npx expo",
+    "start": "npx expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
