--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.14",
+    "expo": "~51.0.17",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "expo-screen-orientation": "~6.4.1",
-    "expo-linear-gradient": "~12.7.2"
+    "expo-linear-gradient": "~12.7.2",
+    "expo-font": "~12.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
